--- a/template/recommendation.html
+++ b/template/recommendation.html
@@ -119,7 +119,7 @@
         </div>
     </main>
     <footer>
-        <p>Made by Yash Joshi</p>
+        <p>Made by Tushar Bhatt</p>
     </footer>
 </body>
 </html>
