--- a/template/movie_not_found.html
+++ b/template/movie_not_found.html
@@ -76,7 +76,7 @@
         </div>
     </main>
     <footer>
-        <p>Made by Yash Joshi</p>
+        <p>Made by Tushar Bhatt</p>
     </footer>
 </body>
 </html>
